---------
0.3.1
---------
- Fix duplicate sprite counter in build report not counting individual alternative sprites like total does.

---------
0.3.0
---------
- Reorganize base sprite/action hierarchy so it better reflects newgrf structure. Also rename classes to use common terms rather than grf-specific ones (real/pseudo sprite).
	- Rename `BaseSprite` to `Action`.
	- Rename `IntermediateSprite` to `FakeAction`.
	- Rename `RealSprite` to `ResourceAction`.
	- Add new base class `Resource` that resources now inherit instead of `RealSprite`.
	- Make `ResourceAction` and `AlternativeSprites` containers for the `Resource` objects.
	- Rename `SoundSprite` to `Sound`.
	- Rename `GraphicsSprite` to `Sprite`.
	- Rename `EmptyGraphicsSprite` to `EmptySprite`.
	- Remove  `LazyAciton` and `Action.get_data_size` as no longer necessary.
- Fix auto-assigned IDs overlapping when adding vehicles.
- Fix encoding of label lists in Action0 properties.
- Fix encoding and decoding of Action 5.
- Fix `min_life` Action0 property size for houses (spec error).
- Fix `Switch` code using wrong feature for related scope.
- Fix `Switch` code grammar issues.
- Fix alpha generation when using colourkey.
- Fix encoding of `min_bridge_height` Action 0 station property (#33).
- Fix imageSprite conversion for non-P and non-RGBA images (#43).
- Add sprite cache.
- Optimize memory usage when writing NewGRF.
- Optimize grf file size by removing duplicate sprites (by data).
- Allow defining named temporary variables in `Switch` code.
- Rename zoom constants to use natural/nml order: `ZOOM_4X` -> `ZOOM_2X` -> `ZOOM_NORMAL` -> `ZOOM_OUT_2X` -> `ZOOM_OUT_4X` -> `ZOOM_OUT_8X`.
- Rename `PALETTE` to `PIL_PALETTE`, add `PALETTE` as a list of (r, g, b) tuples.
- Add `OKLAB_PALETTE`, `NP_PALETTE`, `PALETTE_IDX` constants.
- Add `srgb_to_linear`, `linear_to_srgb`, `srgb_to_oklab`, `oklab_to_srgb` colour conversion functions.
- Add `mode` argument to `Mask` with option to overdraw sprite.